QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog


GIT HEAD

- Added alternate yet non-official CMake build option.
  (EXPERIMENTAL)

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Configure updated to check for qtchooser availability.

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release.

- Fix build on linux with musl (according to POSIX.1-2001,
  POSIX.1-2008; PR#7 by Andreas Müller aka. schnitzeltony,
  thanks).


0.5.3  2019-03-11  Pre-LAC2019 release frenzy.

- HiDPI display screen support (Qt >= 5.6).

- Old deprecated Qt4 build support is no more.


0.5.2  2018-07-22  A Summer'18 release.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP); also updated to be the most
  compliant with latest freedesktop.org specification and
  recommendation.

- Fixed for some g++ >= 8.1.1 warnings and quietness.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- A little hardening on the configure (autoconf) macro side.


0.5.0  2017-12-16  End of Autum'17 release.

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.4.3  2017-04-27  Pre-LAC2017 release frenzy.

- Added new and replaced old system-tray menu icons.

- Make builds reproducible byte for byte, by getting rid of
  the configure build date and time stamps.


0.4.2  2016-11-14  A Fall'16 release.

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant